// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden corpus > scores choppy-simplistic.md against blog deterministically 1`] = `
{
  "dimensions": [
    {
      "findings": [],
      "id": "grade-band",
      "score": 0.093084,
      "skipped": false,
      "weight": 0.2,
    },
    {
      "findings": [],
      "id": "sentence-simplicity",
      "score": 1,
      "skipped": false,
      "weight": 0.1,
    },
  ],
  "profile": "blog",
  "score": 40,
  "words": 90,
}
`;

exports[`golden corpus > scores dense-academic.md against academic deterministically 1`] = `
{
  "dimensions": [
    {
      "findings": [],
      "id": "grade-band",
      "score": 0.016789,
      "skipped": false,
      "weight": 0.2,
    },
    {
      "findings": [
        {
          "excerpt": "The epistemological ramifications of the aforementioned methodological framework necessitate a comprehensive reconsider…",
          "hint": "51 words, grade ~39 — split or simplify.",
          "line": 3,
          "rule": "sentence-length",
          "severity": "warn",
        },
        {
          "excerpt": "Furthermore, the inextricable interconnectedness of these phenomenological considerations, when subjected to rigorous a…",
          "hint": "41 words, grade ~35 — split or simplify.",
          "line": 10,
          "rule": "sentence-length",
          "severity": "warn",
        },
      ],
      "id": "sentence-simplicity",
      "score": 0.375,
      "skipped": false,
      "weight": 0.1,
    },
  ],
  "profile": "academic",
  "score": 14,
  "words": 96,
}
`;

exports[`golden corpus > scores good-readme.md against readme deterministically 1`] = `
{
  "dimensions": [
    {
      "findings": [],
      "id": "grade-band",
      "score": 0.582293,
      "skipped": false,
      "weight": 0.2,
    },
    {
      "findings": [],
      "id": "sentence-simplicity",
      "score": 1,
      "skipped": false,
      "weight": 0.1,
    },
  ],
  "profile": "readme",
  "score": 72,
  "words": 157,
}
`;

exports[`golden corpus > scores plaintext-sample.txt against plain deterministically 1`] = `
{
  "dimensions": [
    {
      "findings": [],
      "id": "grade-band",
      "score": 0.360977,
      "skipped": false,
      "weight": 0.2,
    },
    {
      "findings": [],
      "id": "sentence-simplicity",
      "score": 1,
      "skipped": false,
      "weight": 0.1,
    },
  ],
  "profile": "plain",
  "score": 57,
  "words": 133,
}
`;
